--- a/css/css.css
+++ b/css/css.css
@@ -112,9 +112,10 @@ a.active,a:focus,a:hover{
     justify-content: center;
     background-image: -webkit-gradient(linear,left top,left bottom,from(rgba(0,0,0,.48)),color-stop(.01%,rgba(16,18,23)),to(rgba(0,0,0,.48)));
     background-image: -moz-linear-gradient(top,rgba(0,0,0,.8) 0,rgba(0,0,0,.48) .01%,#101217) 100%));
-    background-image: -o-linear-gradient(top,rgba(0,0,0,.8) 0,rgba(0,0,0,.48) .01%,#101217 100%),image(C:\Users\voidv\Downloads\bleedbot\assets\fog.jpg);
-    background-image: linear-gradient(180deg,rgba(0,0,0,.8) 0,rgba(0,0,0,.48) .01%,#101217 100%),image(C:\Users\voidv\Downloads\bleedbot\assets\fog.jpg);
-    background-image: linear-gradient(180deg,rgba(0,0,0,.8) 0,rgba(0,0,0,.48) .01%,#101217 100%),image(C:\Users\voidv\Downloads\bleedbot\assets\fog.jpg) ) background-position: center;
+    background-image: -o-linear-gradient(top,rgba(0,0,0,.8) 0,rgba(0,0,0,.48) .01%,#101217 100%),url(https://raw.githubusercontent.com/Vetrivex/cosmos-dhc-website/a6325538ac4aa7397421295139cf76b1dced6273/assets/fog.jpg);
+    background-image: linear-gradient(180deg,rgba(0,0,0,.8) 0,rgba(0,0,0,.48) .01%,#101217 100%),url(https://raw.githubusercontent.com/Vetrivex/cosmos-dhc-website/a6325538ac4aa7397421295139cf76b1dced6273/assets/fog.jpg);
+    background-image: linear-gradient(180deg,rgba(0,0,0,.8) 0,rgba(0,0,0,.48) .01%,#101217 100%),url(https://raw.githubusercontent.com/Vetrivex/cosmos-dhc-website/a6325538ac4aa7397421295139cf76b1dced6273/assets/fog.jpg);
+    background-position: center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -173,7 +174,7 @@ a.active,a:focus,a:hover{
     .home .model .header .logo {
         margin: 15px;
         opacity: .8;
-        background-image: image(C:\Users\voidv\Downloads\bleedbot\assets\logo_transparent.png);
+        background-image: url(https://raw.githubusercontent.com/Vetrivex/cosmos-dhc-website/a6325538ac4aa7397421295139cf76b1dced6273/assets/logo_transparent.png);
         background-position: center;
         background-repeat: no-repeat;
         -webkit-background-size: cover;
@@ -221,6 +222,21 @@ a.active,a:focus,a:hover{
     -o-transition:opacity .15s ease-in-out;
     -moz-transition:opacity .15s ease-in-out;
     transition:opacity .15s ease-in-out
+}
+.logo {
+    margin: 15px;
+    opacity: .8;
+    background-image: url(https://raw.githubusercontent.com/Vetrivex/cosmos-dhc-website/a6325538ac4aa7397421295139cf76b1dced6273/assets/logo_transparent.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    display: block;
+    height: 75vmin;
+    width: 75vmin;
+    max-height: 440px;
+    max-width: 440px;
 }
 .home .model .links a.active,.home .model .links a:focus,.home .model .links a:hover{
     opacity:.7
